geocode-reverse: Make constructor locale safe

When using g_strdup_printf and float values the radix
character (decimal point) is locale dependent and for some
locales will print a comma. This will break the nominatim
queries for us.

Switch to using g_ascii_dtostr() instead which will always
use a dot as decimal point.

https://bugzilla.gnome.org/show_bug.cgi?id=706786